force-app/main/default/objects/TL_Programme__c/fields/TL_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Owner_Name__c</fullName>
    <label>TL Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>