force-app/main/default/objects/TL_Programme__c/fields/TL_Region__c.field-meta.xml
<CustomField>
    <fullName>TL_Region__c</fullName>
    <formula>Text(Opportunity__r.TL_Region__c)</formula>
    <label>TL Region</label>
    <type>Text</type>
</CustomField>