force-app/main/default/objects/TL_Programme__c/fields/Training_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Training_Schedule__c</fullName>
    <inlineHelpText>For use on the Contract</inlineHelpText>
    <label>Training Schedule</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>