force-app/main/default/objects/TL_Programme__c/fields/Update_contract_Information__c.field-meta.xml
<CustomField>
    <fullName>Update_contract_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update contract Information</label>
    <type>Checkbox</type>
</CustomField>