force-app/main/default/objects/TL_Programme__c/fields/Withdrawal_Deferral_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Deferral_Cancellation__c</fullName>
    <label>Withdrawal, Deferral &amp; Cancellation</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>