force-app/main/default/objects/TL_Programme__c/fields/X18th_Month_Deadline__c.field-meta.xml
<CustomField>
    <fullName>X18th_Month_Deadline__c</fullName>
    <inlineHelpText>NPQ 18th Month Deadline</inlineHelpText>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>