force-app/main/default/objects/TL_Programme__c/fields/X50_facilitators_SSL__c.field-meta.xml
<CustomField>
    <fullName>X50_facilitators_SSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>50% facilitators SSL</label>
    <type>Checkbox</type>
</CustomField>