force-app/main/default/objects/TL_Programme__c/recordTypes/Cohort.recordType-meta.xml
<RecordType>
    <fullName>Cohort</fullName>
    <active>true</active>
    <description>This should be used for all non-MLP/ALP programmes and is used to store Cohort info related to a Programme</description>
    <label>Cohort</label>
</RecordType>