force-app/main/default/objects/TL_Programme__c/recordTypes/School_Programme.recordType-meta.xml
<RecordType>
    <fullName>School_Programme</fullName>
    <active>true</active>
    <description>This should be used for MLP and ALP programmes only.</description>
    <label>School Programme</label>
</RecordType>