force-app/main/default/objects/TL_Programme__c/validationRules/Check_Opportunity_exists_for_Programme.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Opportunity_exists_for_Programme</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISBLANK(Opportunity__c),ISNULL(Opportunity__c)),
 RecordType.DeveloperName = &#39;School_Programme&#39;)</errorConditionFormula>
    <errorDisplayField>Content_Folder_Name__c</errorDisplayField>
    <errorMessage>Please pick an Opportunity to associate with the new Programme.</errorMessage>
</ValidationRule>