force-app/main/default/objects/TL_Programme__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <description>Start date must not be after end date.</description>
    <errorConditionFormula>Cohort_Start_Date__c &gt; Cohort_End_Date__c</errorConditionFormula>
    <errorMessage>Start date must not be after end date.</errorMessage>
</ValidationRule>