force-app/main/default/objects/TL_Programme__c/validationRules/LMS_Course_Section_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_Course_Section_Id</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISCHANGED(LMS_Course_Section_Id__c),
   NOT ISBLANK(PRIORVALUE(LMS_Course_Section_Id__c))
)</errorConditionFormula>
    <errorDisplayField>LMS_Course_Section_Id__c</errorDisplayField>
    <errorMessage>This field can&#39;t be changed after first initialization</errorMessage>
</ValidationRule>