force-app/main/default/objects/TL_Programme__c/validationRules/Prevent_Cohort_if_Programme_is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Cohort_if_Programme_is_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ,RecordType.DeveloperName == &quot;Cohort&quot;,OR(ISPICKVAL( Programme_Definition__r.Status__c ,&quot;Inactive&quot;),ISPICKVAL( Programme_Definition__r.Status__c ,&quot;Complete&quot;)))</errorConditionFormula>
    <errorMessage>You cannot create Cohort if Programme Definition is Inactive or Complete.</errorMessage>
</ValidationRule>