force-app/main/default/objects/TL_Programme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TL_Programme__c.Cohort</value>
    </filters>
    <label>All</label>
</ListView>