force-app/main/default/objects/TL_Programme__c/listViews/Cohorts_Active.listView-meta.xml
<ListView>
    <fullName>Cohorts_Active</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Do_Not_Show_Jobs_Tab__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TL_Programme__c.Cohort</value>
    </filters>
    <filters>
        <field>Cohort_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Programme_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cohorts - Active</label>
    <language>en_US</language>
</ListView>