force-app/main/default/objects/TL_Programme__c/listViews/Cohorts_Master_List_Active.listView-meta.xml
<ListView>
    <fullName>Cohorts_Master_List_Active</fullName>
    <columns>NAME</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Programme_Name_searchable__c</columns>
    <columns>Programme_Status__c</columns>
    <columns>Programme_Type__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cohort_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Cohorts/Programmes Master List - Active</label>
    <language>en_US</language>
</ListView>