force-app/main/default/objects/TL_Programme__c/listViews/Copy_of_Cohort_Numbers_for_Products.listView-meta.xml
<ListView>
    <fullName>Copy_of_Cohort_Numbers_for_Products</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of Cohort Numbers (for Products)</label>
</ListView>