force-app/main/default/objects/TL_Programme__c/listViews/EE2_Building_and_Leading_MAT.listView-meta.xml
<ListView>
    <fullName>EE2_Building_and_Leading_MAT</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Box_Folder_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>equals</operation>
        <value>Executive Educators: Building and Leading a Sustainable MAT</value>
    </filters>
    <label>EE2: Building and Leading MAT</label>
    <language>en_US</language>
</ListView>