force-app/main/default/objects/TL_Programme__c/listViews/Executive_Educators.listView-meta.xml
<ListView>
    <fullName>Executive_Educators</fullName>
    <columns>NAME</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Active_Participants__c</columns>
    <columns>Programme_Name__c</columns>
    <columns>Programme_Type__c</columns>
    <columns>Show_Attendance_Score__c</columns>
    <columns>Summary_of_Events__c</columns>
    <columns>Cohort_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>equals</operation>
        <value>Executive Educators: Leading Several Schools</value>
    </filters>
    <filters>
        <field>Cohort_Status__c</field>
        <operation>equals</operation>
        <value>Active,Complete</value>
    </filters>
    <label>EE1 cohorts: Leading Several Schools</label>
</ListView>