force-app/main/default/objects/TL_Programme__c/listViews/Future_Leaders_Cohorts.listView-meta.xml
<ListView>
    <fullName>Future_Leaders_Cohorts</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Box_Folder_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>contains</operation>
        <value>Future</value>
    </filters>
    <label>Future Leaders Cohorts</label>
    <language>en_US</language>
</ListView>