force-app/main/default/objects/TL_Programme__c/listViews/IfT_Cohorts.listView-meta.xml
<ListView>
    <fullName>IfT_Cohorts</fullName>
    <columns>NAME</columns>
    <columns>Programme_Name__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Cohort_Start_Date__c</columns>
    <columns>Cohort_End_Date__c</columns>
    <columns>Cohort_Status__c</columns>
    <columns>Do_Not_Show_Jobs_Tab__c</columns>
    <columns>Show_Attendance_Score__c</columns>
    <columns>Number_of_Coaching_Sessions__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Box_Folder_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TL_Programme__c.Cohort</value>
    </filters>
    <filters>
        <field>Programme_Name__c</field>
        <operation>equals</operation>
        <value>Transforming Teaching,Fellowship in Teacher Education,Masters in Expert Teaching</value>
    </filters>
    <label>IfT Cohorts</label>
    <language>en_US</language>
</ListView>